--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: GitHub Action for pytest
-        run: echo Hello, world!
+        run: cclauss/GitHub-Action-for-pytest@master
 
       # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
