--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: GitHub Action for pytest
         uses: cclauss/GitHub-Action-for-pytest@master
-
+        run: pytest
       # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
       #  run: |
