--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
 
-      # Runs a single command using the runners shell
+      # Runs all the test cases in the project
       - name: GitHub Action for pytest
         uses: cclauss/GitHub-Action-for-pytest@master
         with: 
           args: pytest
+
+      # Format the code according to Pep8
+      - name: autopep8
+        id: autopep8
+        uses: peter-evans/autopep8@v1
+        with:
+          args: --recursive --in-place --aggressive --aggressive .
       # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
       #  run: |
