--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         with: 
           args: pytest
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
         with:
           ref: ${{ github.head_ref }}
       - name: autoyapf
