--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
         with: 
           args: pytest
 
-      - uses: actions/checkout@main
-        with:
-          ref: ${{ github.head_ref }}
+      # - uses: actions/checkout@main
+      #   with:
+      #     ref: ${{ github.head_ref }}
       - name: autoyapf
         id: autoyapf
         uses: mritunjaysharma394/autoyapf@v2
