add branch name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           git config --global user.email 'rameshjes@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "Automated formating of code using PEP8 standards"
-          git push
+          git push origin main
 
       # Format the code according to Pep8
       # - name: autopep8
