--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,29 +22,37 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
 
+      
+
+      # lint with flak8
+      - name: Link with flake8
+      run:
+        pip install flake8
+        # stop the build if there are python errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
       # Runs all the test cases in the project
       - name: GitHub Action for pytest
         uses: cclauss/GitHub-Action-for-pytest@master
         with: 
           args: pytest
-
       # pep8
-      - name: PEP8 Formating
-        id: autoyapf
-        uses: mritunjaysharma394/autoyapf@v2
-        with:
-          args: --style pep8 --recursive --in-place .
-      - name: Check for modified files
-        id: git-check
-        run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
-      - name: Push changes
-        if: steps.git-check.outputs.modified == 'true'
-        run: |
-          git config --global user.name 'Ramesh Kumar'
-          git config --global user.email 'rameshjes@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Automated formating of code using PEP8 standards"
-          git push
+      # - name: PEP8 Formating
+      #   id: autoyapf
+      #   uses: mritunjaysharma394/autoyapf@v2
+      #   with:
+      #     args: --style pep8 --recursive --in-place .
+      # - name: Check for modified files
+      #   id: git-check
+      #   run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
+      # - name: Push changes
+      #   if: steps.git-check.outputs.modified == 'true'
+      #   run: |
+      #     git config --global user.name 'Ramesh Kumar'
+      #     git config --global user.email 'rameshjes@users.noreply.github.com'
+      #     git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+      #     git commit -am "Automated formating of code using PEP8 standards"
+      #     git push
 
       # Format the code according to Pep8
       # - name: autopep8
