--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
-
-      
+      # Runs all the test cases in the project
+      - name: GitHub Action for pytest
+        uses: cclauss/GitHub-Action-for-pytest@master
+        with: 
+          args: pytest
 
       # lint with flak8
       - name: Link with flake8
@@ -30,12 +33,9 @@ jobs:
         pip install flake8
         # stop the build if there are python errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-
-      # Runs all the test cases in the project
-      - name: GitHub Action for pytest
-        uses: cclauss/GitHub-Action-for-pytest@master
-        with: 
-          args: pytest
+        # exit zero treats all errors as warning. The Github editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      
       # pep8
       # - name: PEP8 Formating
       #   id: autoyapf
