--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       # lint with flak8
       - name: Link with flake8
-      run:
+      run: |
         pip install flake8
         # stop the build if there are python errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
