--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,12 @@ jobs:
 
       # lint with flak8
       - name: Link with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are python errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit zero treats all errors as warning. The Github editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        run:
+          pip install flake8
+          # stop the build if there are python errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit zero treats all errors as warning. The Github editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
       # pep8
       # - name: PEP8 Formating
