--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,18 @@ jobs:
         uses: cclauss/GitHub-Action-for-pytest@master
         with: 
           args: pytest
+      # flake8
+      - name: Setup flake8 annotations
+        uses: rbialon/flake8-annotations@v1
 
       # lint with flak8
       - name: Link with flake8
-        run:
+        run: |
           pip install flake8
           # stop the build if there are python errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit zero treats all errors as warning. The Github editor is 127 chars wide
-          # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
       # pep8
       # - name: PEP8 Formating
