--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
+
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       # Runs all the test cases in the project
       - name: GitHub Action for pytest
         uses: cclauss/GitHub-Action-for-pytest@master
@@ -33,7 +39,7 @@ jobs:
       # lint with flak8
       - name: Link with flake8
         run: |
-          pip install flake8
+          # pip install flake8
           # stop the build if there are python errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit zero treats all errors as warning. The Github editor is 127 chars wide
