--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,24 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
+      # pep8
+      - name: PEP8 Formating
+        id: autoyapf
+        uses: mritunjaysharma394/autoyapf@v2
+        with:
+          args: --style pep8 --recursive --in-place .
+      - name: Check for modified files
+        id: git-check
+        run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
+      - name: Push changes
+        if: steps.git-check.outputs.modified == 'true'
+        run: |
+          git config --global user.name 'Ramesh Kumar'
+          git config --global user.email 'rameshjes@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git commit -am "Automated formating of code using PEP8 standards"
+          git push
+
       # flake8
       - name: Setup flake8 annotations
         uses: rbialon/flake8-annotations@v1
@@ -50,24 +67,7 @@ jobs:
         # uses: cclauss/GitHub-Action-for-pytest@master
         # with: 
           # args: pytest
-      # pep8
-      # - name: PEP8 Formating
-      #   id: autoyapf
-      #   uses: mritunjaysharma394/autoyapf@v2
-      #   with:
-      #     args: --style pep8 --recursive --in-place .
-      # - name: Check for modified files
-      #   id: git-check
-      #   run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
-      # - name: Push changes
-      #   if: steps.git-check.outputs.modified == 'true'
-      #   run: |
-      #     git config --global user.name 'Ramesh Kumar'
-      #     git config --global user.email 'rameshjes@users.noreply.github.com'
-      #     git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-      #     git commit -am "Automated formating of code using PEP8 standards"
-      #     git push
-
+      
       # Format the code according to Pep8
       # - name: autopep8
       #   id: autopep8
