run test case on particular script in each action

--- a/.github/workflows/flask_app.yml
+++ b/.github/workflows/flask_app.yml
@@ -63,4 +63,4 @@ jobs:
       # Runs all the test cases in the project
       - name: GitHub Action for pytest
         run: |
-          pytest 
+          pytest src/tests/test_app.py
