--- a/.github/workflows/flask_app.yml
+++ b/.github/workflows/flask_app.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
+      - run: |
+          git fetch --prune --unshallow
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
